<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarHakkinda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHakkinda">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/hakkindaBaslik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkindaBaslik"
                android:gravity="center"
                android:textSize="32sp"
                android:textColor="@color/PrimaryColor2"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkinda"
                android:gravity="center"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/hakkindaBaslik2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkindaBaslikKullanimaAcma"
                android:gravity="center"
                android:textSize="32sp"
                android:textColor="@color/PrimaryColor2"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkindaKullanimaAcma"
                android:gravity="center"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/hakkindaBaslik3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkindaBilgiGuvenligiBaslik"
                android:gravity="center"
                android:textSize="32sp"
                android:textColor="@color/PrimaryColor2"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkindaBilgiGuvenligi"
                android:gravity="center"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/hakkindaBaslik4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkindaGuvenliBaglantiBaslik"
                android:gravity="center"
                android:textSize="32sp"
                android:textColor="@color/PrimaryColor2"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkindaGuvenliBaglanti"
                android:gravity="center"
                android:textSize="18sp"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>